# cnm

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cnm/: CMakeLists.txt
cnm/include/: cnm.hpp
cnm/include/communication/: connection.hpp  context.hpp  master_ctx.hpp  message.hpp  slave_ctx.hpp
cnm/include/connection/: connection.hpp
cnm/include/entities/runners/: office_equipment.hpp  personal_computer.hpp  runner.hpp  server.hpp
cnm/include/machine/: machine.hpp
cnm/include/utils/: thread_pool.hpp  thread_safe_queue.hpp
cnm/src/: cnm.cpp  cnm.hpp
cnm/src/communication/: channel.hpp  connection.cpp  connection.hpp  context.cpp  context.hpp  master_ctx.hpp  message.hpp  slave_ctx.hpp
cnm/src/communication/channels/: channel.hpp  exceptions.hpp  impl.hpp  storage.hpp
cnm/src/connection/: builder.cpp  builder.hpp  channel.hpp  connection.cpp  connection.hpp  context.hpp  exceptions.hpp  requester_ctx.hpp  server_ctx.hpp
cnm/src/entities/runners/: office_equipment.hpp  personal_computer.hpp  runner.hpp  server.cpp  server.hpp
cnm/src/machines/: machine.hpp  office_equipment.hpp  personal_computer.hpp  server.cpp  server.hpp
cnm/src/machines/logic/: logics.cpp  logics.hpp  server.hpp
cnm/src/runners/: personal_computer.hpp  server.cpp  server.hpp
cnm/src/topology/common/: exceptions.hpp  node.hpp
cnm/src/topology/ring/: iterator.hpp  node.hpp  ring.cpp  ring.hpp
cnm/src/topology/star/: hub.hpp  node.hpp
cnm/src/utils/: thread_pool.cpp  thread_pool.hpp  thread_safe_queue.hpp
cnm/test/: cnm_test.cpp
cnm/test/communication/: channel_test.cpp
cnm/test/communication/channel/: channel_test.cpp  storage_test.cpp
cnm/test/utils/: safe_queue_test.cpp
cnm_core/: CMakeLists.txt
cnm_core/src/cnm/: cnm.cpp  cnm.hpp  message.hpp
cnm_core/src/cnm/connection/: client_ctx.cpp  client_ctx.hpp  connection.cpp  connection.hpp  ctx_factory.hpp  server_ctx.cpp  server_ctx.hpp
cnm_core/src/cnm/core/: message.hpp  object.hpp
cnm_core/src/cnm/machine/: communicator.hpp  host_info.cpp  host_info.hpp  interactor.hpp  machine.hpp  office_equipment.cpp  office_equipment.hpp  personal_computer.cpp  personal_computer.hpp  server.cpp  server.hpp
cnm_core/src/cnm/topology/: topology.hpp
cnm_core/src/cnm/utils/: one_time_builder.hpp  result.hpp  sleep_wrapper.hpp  thread_pool.hpp  thread_safe_queue.hpp
cnm_core/test/cnm/connection/: connection_test.cpp
cnm_core/test/cnm/machine/: host_info_test.cpp
cnm_core/test/cnm/utils/: one_time_builder_test.cpp  result_test.cpp  thread_safe_queue_test.cpp
cnm_core/test/mocks/: base_connection.hpp  base_connection_node.hpp  client_node.hpp  communicator.hpp  connection.hpp  connection_node.hpp  intermediate_node.hpp  machine.hpp  node.hpp  server_node.hpp  sleep_wrapper.hpp
cnm_gui/: CMakeLists.txt
cnm_gui/src/: applicaiton.cpp  application.cpp  application.hpp  main.cpp  topology.hpp
cnm_gui/src/app/: application.cpp  application.hpp
cnm_gui/src/helpers/: fps_window.cpp  fps_window.hpp  menu.hpp
cnm_gui/src/lib/menu/: menu.cpp  menu.hpp
cnm_gui/src/lib/nodes/: imnodes.cpp  imnodes.hpp  imnodes_internal.hpp
cnm_gui/src/lib/popups/: create_office_equipment.cpp  create_office_equipment.hpp  create_personal_computer.cpp  create_personal_computer.hpp  create_server.cpp  create_server.hpp
cnm_gui/src/lib/render/: list_chooser.hpp  (+9 more)
cnm_gui/src/nodes/: path.hpp  view.cpp  view.hpp
cnm_gui/src/scenes/: main_scene.cpp  main_scene.hpp  test_scene.hpp
guitest/: CMakeLists.txt  main.cpp  scenes_main.cpp  work.hpp
guitest/drawings/: CMakeLists.txt  drawings.hpp  main.cpp
(+84 files in other folders)
